--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <title>박도연 포트폴리오</title>
 </head>
+
+<!-- 헤더 -->
+<header>
+    <div class="nav-container">
+        <img src="img/logo.png" alt="로고">
+        <p>커널로그 지원 포트폴리오</p>
+    </div>
+</header>
+
 <body>
-    
+    <main class="main">
+        <!-- 배너 -->
+        <div class="banner">
+            <img src="img/banner-1.png" alt="배너">
+            <img src="img/banner-2.png" alt="배너">
+            <img src="img/banner-3.png" alt="배너">
+        </div>
+
+
+    </main>
+
+    <script src="js/index.js"></script>
 </body>
+
 </html>
