배너 슬라이드 애니메이션

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 <body>
     <main class="main">
         <!-- 배너 -->
-        <div class="banner">
-            <img src="img/banner-1.png" alt="배너">
-            <img src="img/banner-2.png" alt="배너">
-            <img src="img/banner-3.png" alt="배너">
+        <div class="loop-cont">
+            <div class="banner">
+                <img src="img/banner-1.png" class="banner-list" alt="배너">
+                <img src="img/banner-2.png" class="banner-list" alt="배너">
+                <img src="img/banner-3.png" class="banner-list" alt="배너">
+            </div>
         </div>
+
 
 
     </main>
