--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- 헤더 -->
 <header>
     <div class="nav-container">
-        <img src="img/logo.png" alt="로고">
+        <img src="img/conalog-logo.svg" class="logo" alt="로고">
         <p>커널로그 지원 포트폴리오</p>
     </div>
 </header>
