header, banner 최종

--- a/index.html
+++ b/index.html
@@ -10,28 +10,32 @@
     <title>박도연 포트폴리오</title>
 </head>
 
-<!-- 헤더 -->
-<header>
-    <div class="nav-container">
-        <img src="img/conalog-logo.svg" class="logo" alt="로고">
-        <p>커널로그 지원 포트폴리오</p>
-    </div>
-</header>
-
 <body>
-    <main class="main">
-        <!-- 배너 -->
-        <div class="loop-cont">
-            <div class="banner">
-                <img src="img/banner-1.png" class="banner-list" alt="배너">
-                <img src="img/banner-2.png" class="banner-list" alt="배너">
-                <img src="img/banner-3.png" class="banner-list" alt="배너">
+    <div class="container">
+        <!-- 헤더 -->
+        <header>
+            <div class="header-container">
+                <div class="header">
+                    <img src="img/conalog-logo.svg" class="logo" alt="로고">
+                    <p id="text">안녕하세요! 커널로그에 지원한 박도연입니다.</p>
+                    <a id="item-1" href="https://parkdoyeon-web.notion.site/efe274596e86456ab7b537a3ee1405cc">이력서</a>
+                    <a id="item-2">프로젝트</a>
+                </div>
             </div>
-        </div>
+        </header>
 
-
-
-    </main>
+        <!-- 메인 -->
+        <main class="main">
+            <!-- 배너 -->
+            <div class="loop-cont">
+                <div class="banner">
+                    <img src="img/banner-1.png" class="banner-list" alt="배너">
+                    <img src="img/banner-2.png" class="banner-list" alt="배너">
+                    <img src="img/banner-3.png" class="banner-list" alt="배너">
+                </div>
+            </div>
+        </main>
+    </div>
 
     <script src="js/index.js"></script>
 </body>
