header, banner 완성 context 시작

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/context.css">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <title>박도연 포트폴리오</title>
 </head>
@@ -24,7 +25,6 @@
             </div>
         </header>
 
-        <!-- 메인 -->
         <main class="main">
             <!-- 배너 -->
             <div class="loop-cont">
@@ -35,6 +35,11 @@
                 </div>
             </div>
         </main>
+    </div>
+
+    <!-- about me -->
+    <div class="aboutme">
+        <div class="aboutme-title">ABOUT ME</div>
     </div>
 
     <script src="js/index.js"></script>
