--- a/index.html
+++ b/index.html
@@ -37,9 +37,93 @@
         </main>
     </div>
 
-    <!-- about me -->
-    <div class="aboutme">
-        <div class="aboutme-title">ABOUT ME</div>
+    <!-- About Me -->
+    <div class="context fade-in">
+        <p id="context-title">ABOUT ME</p>
+        <div class="line"></div>
+        <p id="context">
+        <table>
+            <!-- 이름 | 생년월일 | 주소 -->
+            <tr>
+                <td><img src="img/person.svg" alt="이름"></td>
+                <td>박도연</td>
+                <td><img src="img/calendar.svg" alt="생년월일"></td>
+                <td>06-12-01</td>
+                <td><img src="img/geo-alt.svg" alt="주소"></td>
+                <td>서울 영등포구 선유로 13길 5 201동 404호</td>
+            </tr>
+            <!-- 연락처 | 이메일 | 깃허브 -->
+            <tr>
+                <td><img src="img/telephone.svg" alt="연락처"></td>
+                <td>010-9424-0147</td>
+                <td><img src="img/envelope.svg" alt="이메일"></td>
+                <td>w2204@e-mirim.hs.kr</td>
+                <td><img src="img/pencil.svg" alt="깃허브"></td>
+                <td><a href="https://github.com/doueov">https://github.com/doueov</a></td>
+            </tr>
+        </table>
+    </div>
+
+    <!-- Skill Set -->
+    <div class="context fade-in">
+        <p id="context-title">SKILL SET</p>
+        <div class="line"></div>
+
+        <table>
+            <tr>
+                <td>FRONTEND</td>
+                <td>
+                    <img src="https://img.shields.io/badge/HTML5-E34F26?style=flat-square&logo=HTML5&logoColor=white">
+                    <img
+                        src="https://img.shields.io/badge/Javascript-F7DF1E?style=flat-square&logo=Javascript&logoColor=white">
+                    <img src="https://img.shields.io/badge/CSS3-1572B6?style=flat-square&logo=CSS3&logoColor=white">
+                    <img src="https://img.shields.io/badge/jQuery-0769AD?style=flat-square&logo=jQuery&logoColor=white">
+                    <img
+                        src="https://img.shields.io/badge/Bootstrap-7952B3?style=flat-square&logo=Bootstrap&logoColor=white">
+                </td>
+
+            </tr>
+            <tr>
+                <td>BACKEND</td>
+                <td>
+                    <img
+                        src="https://img.shields.io/badge/Node.js-339933?style=flat-square&logo=Node.js&logoColor=white">
+                    <img
+                        src="https://img.shields.io/badge/Spring Boot-6DB33F?style=flat-square&logo=Spring Boot&logoColor=white">
+                    <img src="https://img.shields.io/badge/Java-007396?style=flat-square&logo=Java&logoColor=white">
+                    <img src="https://img.shields.io/badge/Python-3776AB?style=flat-square&logo=Python&logoColor=white">
+                    <img src="https://img.shields.io/badge/MySQL-4479A1?style=flat-square&logo=MySQL&logoColor=white">
+                </td>
+            </tr>
+            <tr>
+                <td>VERSION CONTROL</td>
+                <td>
+                    <img src="https://img.shields.io/badge/Github-181717?style=flat-square&logo=Github&logoColor=white">
+                    <img src="https://img.shields.io/badge/Git-F05032?style=flat-square&logo=Git&logoColor=white">
+                </td>
+            </tr>
+            <tr>
+                <td>DEPLOYMENT</td>
+                <td>
+                    <img src="https://img.shields.io/badge/Docker-2496ED?style=flat-square&logo=Docker&logoColor=white">
+                </td>
+            </tr>
+            <tr>
+                <td>COMMUNICATION</td>
+                <td>
+                    <img src="https://img.shields.io/badge/Figma-F24E1E?style=flat-square&logo=Figma&logoColor=white">
+                    <img src="https://img.shields.io/badge/Notion-000000?style=flat-square&logo=Notion&logoColor=white">
+                </td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="context fade-in">
+        <p id="context-title">ARCHIVING</p>
+        <div class="line"></div>
+        <div class="img-container">
+            
+        </div>
     </div>
 
     <script src="js/index.js"></script>
