--- a/index.html
+++ b/index.html
@@ -140,50 +140,108 @@
         </div>
     </div>
 
-    <!-- 중간 부분 설명 -->
-        <div class="context fade-in">
-            
-            <p id="context-title">어썹은 손 쉬운 정보 제공을 도와요!</p>
-            <div class="line"></div>
-            <p id="context">가끔씩 재활용 쓰레기를 버릴 때 이게 종이인지 일반 쓰레기인지
-                헷갈리셨던 경험이 있지 않으신가요? <br>
-                저희 어썹은 이러한 문제를 해결하고자 탄생한 서비스입니다!<br>
-                간편하게 카메라로 쓰레기를 찍기만 하면 티처블 머신, 즉 인공지능이 인식하여
-                쓰레기 버리는 방법을 제공받을 수 있습니다. <br>
-                그럼 왜 분리수거를 해야 할까요? <br>
-                쓰레기를 분리수거하지 않으면 쓰레기마다 다른 처리 방법이 필요하지 않으므로 <br>
-                종합적인 처리가 이루어지지 않습니다. 이로 인해 쓰레기 처리 시설에 많은 부담이 가게 되고, <br>
-                쓰레기가 불법 투기되거나 소각되는 경우 환경오염의 원인이 됩니다.</p>
-                <div class="line"></div>
-            <button onClick="location.href='/camera.php'">쓰레기 인식하러 가기</button>
-        </div>
+    <!-- project -->
+    <div class="context fade-in">
 
-        <div class="context fade-in">
-            <p id="context-title">플로깅 모임에 직접 참여해봐요!</p>
-            <div class="line"></div>
-            <p id="context">플로깅에 대해서 아시나요? <br>
-                플로깅(Plogging)은 '줍다'라는 뜻의 스웨덴어 플로카 업(plocka upp)과 '달리다'라는 뜻의 <br>
-                영어 조깅(Jogging)을 합성한 단어로, 쓰레기를 주우며 조깅하는 행동을 의미합니다. <br>
-                플로깅을 하면 근력 운동의 효과 또한 누릴 수 있다. 다리를 구부리고 팔을 뻗어 쓰레기를 줍는 플로깅의 자세 때문입니다! <br>
-                플로깅할 때 다리를 구부리는 것은 근력 운동인 스쿼트 자세와 유사하다. 스쿼트는 허벅지가 무릎과 수평이 될 때까지 앉았다 일어났다 하는 운동으로 <br>
-                옆구리, 허벅지, 엉덩이, 종아리 등 여러 부분에 자극을 주어 군살을 잡아주고 근육을 키우는 효과가 있습니다! <br>
-                또한 무게감 있는 쓰레기봉투를 들거나, 집게로 쓰레기를 줍는 행동은 팔 근력을 강화하는 데에도 도움을 줍니다. <br>
-                이러한 플로깅 모임을 어썹에서 시작해보는 것이 어떨까요?</p>
-                <div class="line"></div>
-            <button onClick="location.href='/ploggingBoard.php'">플로깅 모임 참여하러 가기</button>
-        </div>
+        <p id="context-title">PROJECT</p>
+        <div class="line"></div>
 
-        <div class="context fade-in">
-            <p id="context-title">더 자세하게 알고 싶을 때는 키워드 검색을 해봐요!</p>
-            <div class="line"></div>
-            <p id="context">키워드를 입력하여 더 자세하게 쓰레기 버리는 방법을 알 수 있습니다. <br>
-                환경을 보호하는 방법은 여러가지가 있습니다. 여기서 제안한 것들중 일부는 쉽게 시작할 수 있지만, <br>
-                작은 일부터 시작해서 자신감이 생기면 더 많은 일을 추가해봅시다! <br>
-                환경보호에 동참하는 가장 보편적인 이유는 환경을 보호하기 위해서 이지만, 다른 혜택도받게 됩니다. <br>
-                전기를 절약하거나, 물이 새는 수도꼭지를 고치거나, 옷을 널어 말리면, 물이나 전기 요금이 절약됩니다.</p>
-                <div class="line"></div>
-                <button onClick="location.href='/recosuccess.php'">키워드 검색하러 가기</button>
-        </div>
+        <!-- 어썹 -->
+        <div class="mini-title">어썹 EARTH-UP</div>
+        <table>
+            <img src="img/img-eathup.png" class="earthup" alt="어썹">
+            <tr>
+                <td>작품 설명</td>
+                <td>‘어썹’은 사용자가 버리는 방법을 잘 모르는 쓰레기를 찍어 AI에 인식하면
+                    올바른 처리 방법을 제공하고 언제 어디서든 사용할 수 있는 친환경적 서비스입니다.</td>
+            </tr>
+            <tr>
+                <td>사용 툴</td>
+                <td>HTML, CSS, JavaScript, Apach, MySQL, VScode</td>
+            </tr>
+            <tr>
+                <td>GitHub</td>
+                <td><a href="https://github.com/choijisul/earthup" id="github-link">어썹 깃허브 저장소</a></td>
+            </tr>
+        </table>
+        <div class="line"></div>
+
+        <!-- 비트나미 -->
+        <div class="mini-title">비트나미 BeatNami</div>
+        <img src="img/img-beatnami.png" class="beatnami" alt="비트나미">
+        <table>
+            <tr>
+                <td>작품 설명</td>
+                <td>스토리와 함께 리듬에 맞춰 망치에 못을 박아 게임을 진행하는 스토리형 리듬게임</td>
+            </tr>
+            <tr>
+                <td>사용 툴</td>
+                <td>HTML, CSS, JavaScript, React, VScode</td>
+            </tr>
+            <tr>
+                <td>GitHub</td>
+                <td><a href="https://github.com/choijisul/beatnami" id="github-link">비트나미 깃허브 저장소</a></td>
+            </tr>
+        </table>
+        <div class="line"></div>
+
+        <!-- 탈출! 거북목 -->
+        <div class="mini-title">탈출! 거북목</div>
+        <img src="img/img-turtleneck.png" class="turtle-neck" alt="탈출! 거북목">
+        <table>
+            <tr>
+                <td>작품 설명</td>
+                <td>탈출! 거북목은 미림 마이스터고 학생을 대상으로
+                    전공으로 인해 악화된 신체의 완화를 도와주기 위한 반응형 웹사이트</td>
+            </tr>
+            <tr>
+                <td>사용 툴</td>
+                <td>HTML, CSS, JavaScript, VScode</td>
+            </tr>
+            <tr>
+                <td>GitHub</td>
+                <td><a href="https://github.com/doueov/turtle-neck" id="github-link">탈출! 거북목 깃허브 저장소</a></td>
+            </tr>
+        </table>
+        <div class="line"></div>
+
+        <!-- 맛인드맵 -->
+        <div class="mini-title">맛인드맵</div>
+        <img src="img/img-delicious-map.png" class="delicious-map" alt="맛인드맵">
+        <table>
+            <tr>
+                <td>작품 설명</td>
+                <td>맛인드맵 웹사이트는 웹사이트 사용자들이 직접 타코야끼, 붕어빵, 떡볶이
+                    포장마차의 위치를 지도에 추가하여 공유하는 반응형 웹사이트입니다.</td>
+            </tr>
+            <tr>
+                <td>사용 툴</td>
+                <td>HTML, CSS, JavaScript, VScode</td>
+            </tr>
+            <tr>
+                <td>GitHub</td>
+                <td><a href="https://github.com/doueov/delicious_map" id="github-link">맛인드맵 깃허브 저장소</a></td>
+            </tr>
+        </table>
+        <div class="line"></div>
+
+        <!-- 미림의 담소 -->
+        <div class="mini-title">미림의 담소</div>
+        <table>
+            <tr>
+                <td>작품 설명</td>
+                <td>미림의 담소는 대학교 게시판 중 에타(에브리타임)과 비슷한 형태의 익명 게시판 서비스입니다.</td>
+            </tr>
+            <tr>
+                <td>사용 툴</td>
+                <td>JAVA, SpringBoot, MySQL, IntelliJ</td>
+            </tr>
+            <tr>
+                <td>GitHub</td>
+                <td><a href="https://github.com/didwldk/mirim_chat" id="github-link">미림의 담소 깃허브 저장소</a></td>
+            </tr>
+        </table>
+    </div>
 
     <script src="js/index.js"></script>
 </body>
