fade in 스크롤 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
 
     <!-- project -->
     <div class="context fade-in">
-
         <p id="context-title">PROJECT</p>
         <div class="line"></div>
 
@@ -165,7 +164,9 @@
             </tr>
         </table>
         <div class="line"></div>
+    </div>
 
+    <div class="context fade-in">
         <!-- 비트나미 -->
         <div class="mini-title">비트나미 BeatNami</div>
         <img src="img/img-beatnami.png" class="beatnami" alt="비트나미">
@@ -184,7 +185,9 @@
             </tr>
         </table>
         <div class="line"></div>
+    </div>
 
+    <div class="context fade-in">
         <!-- 탈출! 거북목 -->
         <div class="mini-title">탈출! 거북목</div>
         <img src="img/img-turtleneck.png" class="turtle-neck" alt="탈출! 거북목">
@@ -204,7 +207,9 @@
             </tr>
         </table>
         <div class="line"></div>
+    </div>
 
+    <div class="context fade-in">
         <!-- 맛인드맵 -->
         <div class="mini-title">맛인드맵</div>
         <img src="img/img-delicious-map.png" class="delicious-map" alt="맛인드맵">
@@ -224,7 +229,9 @@
             </tr>
         </table>
         <div class="line"></div>
+    </div>
 
+    <div class="context fade-in">
         <!-- 미림의 담소 -->
         <div class="mini-title">미림의 담소</div>
         <table>
