--- a/index.html
+++ b/index.html
@@ -250,6 +250,18 @@
         </table>
     </div>
 
+    <footer class="footer" id="footer">
+        <div class="footer-content">
+            <div class="footer-line"></div>
+            <a href="https://github.com/doueov"><img src="img/icon-github.png" alt=""></a>
+            <p>박도연</p>
+            <p>미림마이스터고 뉴 미디어 웹솔루션과</P>
+            <p>w2204@e-mirim.hs.kr &nbsp;&nbsp;
+            <a href="https://github.com/doueov">https://github.com/doueov&nbsp;&nbsp;</a>
+            <a href="https://velog.io/@doueov/posts">https://velog.io/@doueov/posts</a></p>
+        </div>
+    </footer>
+
     <script src="js/index.js"></script>
 </body>
 
