프로젝트 북마크 기능

--- a/index.html
+++ b/index.html
@@ -141,30 +141,30 @@
     </div>
 
     <!-- project -->
-    <div class="context fade-in">
-        <p id="context-title">PROJECT</p>
-        <div class="line"></div>
+<div class="context fade-in">
+    <p id="project-section">PROJECT</p>
+    <div class="line"></div>
 
-        <!-- 어썹 -->
-        <div class="mini-title">어썹 EARTH-UP</div>
-        <table>
-            <img src="img/img-eathup.png" class="earthup" alt="어썹">
-            <tr>
-                <td>작품 설명</td>
-                <td>‘어썹’은 사용자가 버리는 방법을 잘 모르는 쓰레기를 찍어 AI에 인식하면
-                    올바른 처리 방법을 제공하고 언제 어디서든 사용할 수 있는 친환경적 서비스입니다.</td>
-            </tr>
-            <tr>
-                <td>사용 툴</td>
-                <td>HTML, CSS, JavaScript, Apach, MySQL, VScode</td>
-            </tr>
-            <tr>
-                <td>GitHub</td>
-                <td><a href="https://github.com/choijisul/earthup" id="github-link">어썹 깃허브 저장소</a></td>
-            </tr>
-        </table>
-        <div class="line"></div>
-    </div>
+    <!-- 어썹 -->
+    <div class="mini-title">어썹 EARTH-UP</div>
+    <table>
+        <img src="img/img-eathup.png" class="earthup" alt="어썹">
+        <tr>
+            <td>작품 설명</td>
+            <td>‘어썹’은 사용자가 버리는 방법을 잘 모르는 쓰레기를 찍어 AI에 인식하면
+                올바른 처리 방법을 제공하고 언제 어디서든 사용할 수 있는 친환경적 서비스입니다.</td>
+        </tr>
+        <tr>
+            <td>사용 툴</td>
+            <td>HTML, CSS, JavaScript, Apach, MySQL, VScode</td>
+        </tr>
+        <tr>
+            <td>GitHub</td>
+            <td><a href="https://github.com/choijisul/earthup" id="github-link">어썹 깃허브 저장소</a></td>
+        </tr>
+    </table>
+    <div class="line"></div>
+</div>
 
     <div class="context fade-in">
         <!-- 비트나미 -->
