마우스 커서 클릭

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img src="img/conalog-logo.svg" class="logo" alt="로고">
                     <p id="text">안녕하세요! 커널로그에 지원한 박도연입니다.</p>
                     <a id="item-1" href="https://parkdoyeon-web.notion.site/efe274596e86456ab7b537a3ee1405cc">이력서</a>
-                    <a id="item-2">프로젝트</a>
+                    <a id="item-2" href="#">프로젝트</a>
                 </div>
             </div>
         </header>
